added icons to play options buttons

--- a/app/src/main/res/layout/fragment_game_type.xml
+++ b/app/src/main/res/layout/fragment_game_type.xml
@@ -7,29 +7,44 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.GameTypeFragment">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/play_options"
+        android:textSize="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlayPerson"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.365" />
+
     <Button
         android:id="@+id/btnPlayComputer"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_marginBottom="40dp"
-        android:textSize="20sp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="256dp"
+        android:backgroundTint="@color/darkGround"
+        android:drawableLeft="@drawable/btn_computer_icon"
         android:text="@string/play_computer"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        android:backgroundTint="@color/redPlayer"/>
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnPlayPerson"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_marginBottom="28dp"
-        android:textSize="20sp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="64dp"
+        android:backgroundTint="@color/darkGround"
+        android:drawableLeft="@drawable/btn_person_icon"
         android:text="@string/play_person"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnPlayComputer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:backgroundTint="@color/redPlayer"/>
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
