--- a/app/src/main/res/layout/fragment_game_type.xml
+++ b/app/src/main/res/layout/fragment_game_type.xml
@@ -5,6 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".Fragments.GameTypeFragment">
 
     <TextView
@@ -25,7 +26,7 @@
         android:layout_height="100dp"
         android:layout_marginBottom="256dp"
         android:backgroundTint="@color/darkGround"
-        android:drawableLeft="@drawable/btn_computer_icon"
+        android:drawableLeft="@drawable/ic_computer"
         android:text="@string/play_computer"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +40,7 @@
         android:layout_height="100dp"
         android:layout_marginBottom="64dp"
         android:backgroundTint="@color/darkGround"
-        android:drawableLeft="@drawable/btn_person_icon"
+        android:drawableLeft="@drawable/ic_person"
         android:text="@string/play_person"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnPlayComputer"
