play options buttons are now rounded and have darkGround color

--- a/app/src/main/res/layout/fragment_game_type.xml
+++ b/app/src/main/res/layout/fragment_game_type.xml
@@ -25,10 +25,11 @@
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_marginBottom="256dp"
-        android:backgroundTint="@color/darkGround"
         android:drawableLeft="@drawable/ic_computer"
         android:text="@string/play_computer"
         android:textSize="20sp"
+        android:background="@drawable/btn_rounded_corners"
+        app:backgroundTint="@color/darkGround"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
@@ -39,10 +40,11 @@
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_marginBottom="64dp"
-        android:backgroundTint="@color/darkGround"
         android:drawableLeft="@drawable/ic_person"
         android:text="@string/play_person"
         android:textSize="20sp"
+        android:background="@drawable/btn_rounded_corners"
+        app:backgroundTint="@color/darkGround"
         app:layout_constraintBottom_toTopOf="@+id/btnPlayComputer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
