--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.DotsBoxes" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.DotsBoxes" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:colorBackground">@color/finalDarkBg</item>
         <item name="android:textColor">@color/white</item>
