--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -185,7 +185,7 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginBottom="16dp"
-            android:backgroundTint="@color/redPlayer"
+            android:backgroundTint="@color/darkGround"
             android:text="@string/play_again"
             android:textSize="20sp"
             android:visibility="invisible"
