--- a/app/src/main/res/layout/fragment_game_type.xml
+++ b/app/src/main/res/layout/fragment_game_type.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/play_options"
+        android:text="@string/dots_boxes"
         android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/btnPlayPerson"
         app:layout_constraintEnd_toEndOf="parent"
