--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -326,7 +326,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/vertices"
                 app:singleSelection="true">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnPlayer1"
                     style="?attr/materialButtonOutlinedStyle"
                     android:layout_width="wrap_content"
