--- a/app/src/main/res/layout/new_user.xml
+++ b/app/src/main/res/layout/new_user.xml
@@ -6,6 +6,26 @@
     android:layout_height="match_parent"
     android:background="@drawable/star_background_image">
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="124dp"
+        android:src="@drawable/ic_baby"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.096"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/ic_speech_bubble"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.649"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/btnLetsPlay"
         android:layout_width="wrap_content"
@@ -21,13 +41,13 @@
 
     <TextView
         android:id="@+id/tvIntroduction"
-        android:layout_width="347dp"
-        android:layout_height="76dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="143dp"
+        android:layout_height="133dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginBottom="108dp"
         android:gravity="center"
         android:text="@string/new_user"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/ptUsername"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -35,7 +55,7 @@
         android:id="@+id/ptUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="276dp"
         android:ems="10"
         android:gravity="center"
         android:inputType="textPersonName"
