--- a/app/src/main/res/layout/new_user.xml
+++ b/app/src/main/res/layout/new_user.xml
@@ -9,10 +9,10 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="364dp"
-        android:src="@drawable/ic_gpa"
+        android:layout_marginTop="360dp"
+        android:src="@drawable/ic_baby"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.864"
+        app:layout_constraintHorizontal_bias="0.832"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,7 +30,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="124dp"
-        android:src="@drawable/ic_baby"
+        android:src="@drawable/ic_blue_haired_girl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.096"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +82,7 @@
         android:minHeight="48dp"
         android:text="@string/new_user_name_input"
         android:textColor="@color/white"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.213"
         app:layout_constraintStart_toStartOf="parent"
