--- a/app/src/main/res/layout/fragment_game_type.xml
+++ b/app/src/main/res/layout/fragment_game_type.xml
@@ -20,33 +20,29 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="280dp"
         android:layout_height="303dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="61dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginBottom="379dp"
-        android:src="@drawable/logo">
-    </androidx.appcompat.widget.AppCompatImageView>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="45dp"
+        android:src="@drawable/logo"></androidx.appcompat.widget.AppCompatImageView>
 
     <Button
         android:id="@+id/btnPlayPerson"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="400dp"
         android:background="@drawable/btn_rounded_corners"
         android:drawableLeft="@drawable/ic_person"
         android:text="@string/play_person"
         android:textSize="20sp"
-        app:backgroundTint="@color/primaryBtn"/>
+        app:backgroundTint="@color/primaryBtn" />
 
     <Button
         android:id="@+id/btnPlayComputer"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="500dp"
         android:background="@drawable/btn_rounded_corners"
         android:drawableLeft="@drawable/ic_computer"
         android:text="@string/play_computer"
