--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -56,8 +56,7 @@
                         android:id="@+id/ivP1"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_baby" />
+                        android:layout_gravity="center" />
                 </androidx.cardview.widget.CardView>
 
                 <TextView
@@ -131,8 +130,7 @@
                         android:id="@+id/ivP2"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_boy_with_bangs" />
+                        android:layout_gravity="center" />
                 </androidx.cardview.widget.CardView>
 
                 <TextView
@@ -170,11 +168,10 @@
             android:id="@+id/tvCurrentTurn"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="16dp"
             android:text="TextView"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
